<resources>
    <string name="app_name">Corona\nTravel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">코로나 현황</string>
    <string name="menu_around">내 주변 관광검색</string>
    <string name="menu_festival">행사 추천</string>
    <string name="menu_bookmark">즐겨찾기</string>
    <string name="menu_totalsearch">통합 검색</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">선별 진료소</string>
    <string-array name="around_traveltype">
        <item>전체</item>
        <item>관광지</item>
        <item>문화 시설</item>
        <item>축제 공연 행사</item>
        <item>여행코스</item>
        <item>레포츠</item>
        <item>숙박</item>
        <item>쇼핑</item>
        <item>음식점</item>
    </string-array>
    <string-array name="festival_term">
        <item>1주</item>
        <item>2주</item>
        <item>4주</item>
    </string-array>
    <string-array name="hightype">
        <item>대분류</item>
        <item>자연</item>
        <item>인문</item>
        <item>레포츠</item>
        <item>쇼핑</item>
        <item>음식</item>
        <item>숙박</item>
        <item>추천 코스</item>
    </string-array>
    <string-array name="middle_1">
        <item>중분류</item>
        <item>자연관광지</item>
        <item>관광자원</item>
    </string-array>
    <string-array name="middle_2">
        <item>중분류</item>
        <item>역사</item>
        <item>휴양</item>
        <item>체험</item>
        <item>산업</item>
        <item>건축/조형물</item>
        <item>문화시설</item>
        <item>축제</item>
        <item>공연/행사</item>
    </string-array>
    <string-array name="middle_3">
        <item>중분류</item>
        <item>레포츠소개</item>
        <item>육상 레포츠</item>
        <item>수상 레포츠</item>
        <item>항공 레포츠</item>
        <item>복합 레포츠</item>
    </string-array>
    <string-array name="middle_4">
        <item>중분류</item>
        <item>쇼핑</item>

    </string-array>
    <string-array name="middle_5">
        <item>중분류</item>
        <item>음식점</item>
    </string-array>
    <string-array name="middle_6">
        <item>중분류</item>
        <item>숙박 시설</item>
    </string-array>
    <string-array name="middle_7">
        <item>중분류</item>
        <item>가족코스</item>
        <item>나홀로코스</item>
        <item>힐링코스</item>
        <item>도보코스</item>
        <item>캠핑코스</item>
        <item>맛코스</item>
    </string-array>
    <string-array name="middletype">
        <item>소분류</item>
    </string-array>
    <string-array name="bigcity">
        <item>전체</item>
        <item>서울</item>
        <item>인천</item>
        <item>대전</item>
        <item>대구</item>
        <item>광주</item>
        <item>부산</item>
        <item>울산</item>
        <item>세종</item>
        <item>경기</item>
        <item>강원</item>
        <item>충북</item>
        <item>충남</item>
        <item>경북</item>
        <item>경남</item>
        <item>전북</item>
        <item>전남</item>
        <item>제주</item>
    </string-array>
    <string-array name="total_middle">
       
    </string-array>
    <string-array name="seoul_middle">
        <item>전체</item>
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중랑구</item>
    </string-array>
    <string-array name="incheon_middle">
        <item>전체</item>
        <item>강화군</item>
        <item>계양구</item>
        <item>미추홀구</item>
        <item>남동구</item>
        <item>동구</item>
        <item>부평구</item>
        <item>서구</item>
        <item>연수구</item>
        <item>옹진군</item>
        <item>중구</item>
    </string-array>
    <string-array name="daejeun_middle">
        <item>전체</item>
        <item>대덕구</item>
        <item>동구</item>
        <item>서구</item>
        <item>유성구</item>
        <item>중구</item>
    </string-array>
    <string-array name="daegu_middle">
        <item>전체</item>
        <item>남구</item>
        <item>달서구</item>
        <item>달성군</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
        <item>수성구</item>
        <item>중구</item>
    </string-array>
    <string-array name="gangju_middle">
        <item>전체</item>
        <item>광산구</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
    </string-array>
    <string-array name="busan_middle">
        <item>전체</item>
        <item>강서구</item>
        <item>금정구</item>
        <item>기장군</item>
        <item>남구</item>
        <item>동구</item>
        <item>동래구</item>
        <item>부산진구</item>
        <item>북구</item>
        <item>시상구</item>
        <item>시하구</item>
        <item>서구</item>
        <item>수영구</item>
        <item>연제구</item>
        <item>영도구</item>
        <item>중구</item>
        <item>해운대구</item>
    </string-array>
    <string-array name="ulsan_middle">
        <item>전체</item>
        <item>중구</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>울주군</item>
    </string-array>
    <string-array name="sejong_middle">
        <item>전체</item>
        <item>세종특별자치시</item>
    </string-array>
    <string-array name="geunggi_middle">
        <item>전체</item>
        <item>가평군</item>
        <item>고양시</item>
        <item>과천시</item>
        <item>광명시</item>
        <item>광주시</item>
        <item>구리시</item>
        <item>군포시</item>
        <item>김포시</item>
        <item>남양주시</item>
        <item>동두천시</item>
        <item>부천시</item>
        <item>성남시</item>
        <item>수원시</item>
        <item>시흥시</item>
        <item>안산시</item>
        <item>안성시</item>
        <item>안양시</item>
        <item>양주시</item>
        <item>양평군</item>
        <item>여주시</item>
        <item>연천군</item>
        <item>오산시</item>
        <item>용인시</item>
        <item>의왕시</item>
        <item>의정부시</item>
        <item>이천시</item>
        <item>파주시</item>
        <item>평택시</item>
        <item>포천시</item>
        <item>하남시</item>
        <item>화성시</item>
    </string-array>
    <string-array name="gangwon_middle">
        <item>전체</item>
        <item>강릉시</item>
        <item>고성군</item>
        <item>동해시</item>
        <item>삼척시</item>
        <item>속초시</item>
        <item>양구군</item>
        <item>양양군</item>
        <item>영월군</item>
        <item>원주시</item>
        <item>인제군</item>
        <item>정선군</item>
        <item>철원군</item>
        <item>춘천시</item>
        <item>태백시</item>
        <item>평창군</item>
        <item>홍천군</item>
        <item>화천군</item>
        <item>횡성군</item>
    </string-array>
    <string-array name="choongbook_middle">
        <item>전체</item>
        <item>괴산군</item>
        <item>단양군</item>
        <item>보은군</item>
        <item>영동군</item>
        <item>옥천군</item>
        <item>음성군</item>
        <item>제천시</item>
        <item>진천군</item>
        <item>청원군</item>
        <item>청주시</item>
        <item>충주시</item>
        <item>증평군</item>
    </string-array>
    <string-array name="choongnam_middle">
        <item>전체</item>
        <item>공주시</item>
        <item>금산군</item>
        <item>논산시</item>
        <item>당진시</item>
        <item>보령시</item>
        <item>부여군</item>
        <item>서산시</item>
        <item>서천군</item>
        <item>아산시</item>
        <item>예산군</item>
        <item>천안시</item>
        <item>청양군</item>
        <item>태안군</item>
        <item>홍성군</item>
        <item>계룡시</item>
    </string-array>
    <string-array name="geungbook_middle">
        <item>전체</item>
        <item>경산시</item>
        <item>경주시</item>
        <item>고령군</item>
        <item>구미시</item>
        <item>군위군</item>
        <item>김천시</item>
        <item>문경시</item>
        <item>봉화군</item>
        <item>상주시</item>
        <item>성주군</item>
        <item>안동시</item>
        <item>영덕군</item>
        <item>영양군</item>
        <item>영주시</item>
        <item>영천시</item>
        <item>예천군</item>
        <item>울릉군</item>
        <item>울진군</item>
        <item>의성군</item>
        <item>청도군</item>
        <item>청송군</item>
        <item>칠곡군</item>
        <item>포항시</item>
    </string-array>
    <string-array name="geungnak_middle">
        <item>전체</item>
        <item>거제시</item>
        <item>거창군</item>
        <item>고성군</item>
        <item>김해시</item>
        <item>남해군</item>
        <item>마산시</item>
        <item>밀양시</item>
        <item>사천시</item>
        <item>산청군</item>
        <item>양산시</item>
        <item>의령군</item>
        <item>진주시</item>
        <item>진해시</item>
        <item>창녕군</item>
        <item>창원시</item>
        <item>통영시</item>
        <item>하동군</item>
        <item>함안군</item>
        <item>함양군</item>
        <item>합천군</item>
    </string-array>
    <string-array name="junbook_middle">
        <item>전체</item>
        <item>고창군</item>
        <item>군산시</item>
        <item>김제시</item>
        <item>남원시</item>
        <item>무주군</item>
        <item>부안군</item>
        <item>순창군</item>
        <item>완주군</item>
        <item>익산시</item>
        <item>임실군</item>
        <item>장수군</item>
        <item>전주시</item>
        <item>정읍시</item>
        <item>진안군</item>
    </string-array>
    <string-array name="junnam_midlle">
        <item>전체</item>
        <item>강진군</item>
        <item>고흥군</item>
        <item>곡성군</item>
        <item>광양시</item>
        <item>구례군</item>
        <item>나주시</item>
        <item>담양군</item>
        <item>목포시</item>
        <item>무안군</item>
        <item>보성군</item>
        <item>순천시</item>
        <item>신안군</item>
        <item>여수시</item>
        <item>영광군</item>
        <item>영암군</item>
        <item>완도군</item>
        <item>장성군</item>
        <item>장흥군</item>
        <item>진도군</item>
        <item>함평군</item>
        <item>해남군</item>
        <item>화순군</item>
    </string-array>
    <string-array name="jeaju_middle">
        <item>전체</item>
        <item>남제주군</item>
        <item>북제주군</item>
        <item>서귀포시</item>
        <item>제주시</item>
    </string-array>
    <string-array name="searchtype">
        <item>인기순</item>
        <item>제목순</item>
        <item>최근수정순</item>
        <item>등록순</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>