<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_around"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_around" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_local" />
        <item
            android:id="@+id/nav_totalsearch"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_totalsearch" />

        <item
            android:id="@+id/nav_festival"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_festival" />

        <item
            android:id="@+id/nav_sleeping"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sleeping" />


        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/menu_bookmark" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
