<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.coronatravel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_festival"
        android:name="com.example.coronatravel.ui.festival.FestivalFragment"
        android:label="@string/menu_festival"
        tools:layout="@layout/fragment_festival" />

    <fragment
        android:id="@+id/nav_around"
        android:name="com.example.coronatravel.ui.around.AroundFragment"
        android:label="@string/menu_around"
        tools:layout="@layout/fragment_around" />


    <fragment
        android:id="@+id/nav_local"
        android:name="com.example.coronatravel.ui.local.LocalFragment"
        android:label="@string/menu_local"
        tools:layout="@layout/fragment_local" />

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.example.coronatravel.ui.bookmark.BookmarkFragment"
        android:label="@string/menu_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.coronatravel.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.coronatravel.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>